mywork/force-app/main/default/objects/VC_Commit__c/VC_Commit__c.object-meta.xml
<CustomObject>
    <label>VC Commit</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>VC Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VC Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>