mywork/force-app/main/default/objects/VC_Commit__c/fields/Backlog_Components__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Components__c</fullName>
    <label>Backlog Components</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>