mywork/force-app/main/default/objects/VC_Commit__c/fields/Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog Item</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Commit History</relationshipLabel>
    <relationshipName>VC_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>