mywork/force-app/main/default/objects/VC_Commit__c/fields/Commit_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Commit_Datetime__c</fullName>
    <label>Commit Datetime</label>
    <inlineHelpText>The Datetime when the revision was committed</inlineHelpText>
    <type>DateTime</type>
</CustomField>