mywork/force-app/main/default/objects/VC_Commit__c/fields/Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>Commit_Message__c</fullName>
    <label>Commit Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>