mywork/force-app/main/default/objects/VC_Commit__c/fields/Commit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Commit_Owner__c</fullName>
    <label>Commit Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>