mywork/force-app/main/default/objects/VC_Commit__c/fields/External_Commit__c.field-meta.xml
<CustomField>
    <fullName>External_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Commit</label>
    <type>Checkbox</type>
</CustomField>