mywork/force-app/main/default/objects/VC_Commit__c/fields/External_Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Commit_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Commit Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>