mywork/force-app/main/default/objects/VC_Commit__c/fields/External_Commit_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Commit_URL__c</fullName>
    <formula>CASE(LOWER(TEXT(VC_Repository__r.Host__c)),
'github',
HYPERLINK("https://github.com/" + VC_Repository__r.Organization_Name__c +  "/" + VC_Repository__r.Name + "/commit/" + External_Commit_Id__c, External_Commit_Id__c),
"bitbucket",
HYPERLINK("https://bitbucket.org/" + VC_Repository__r.Organization_Name__c +  "/" + VC_Repository__r.Name + "/commits/" + External_Commit_Id__c, External_Commit_Id__c),
'')</formula>
    <label>External Commit URL</label>
    <type>Text</type>
</CustomField>