mywork/force-app/main/default/objects/VC_Commit__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <label>Response Message</label>
    <type>TextArea</type>
</CustomField>