mywork/force-app/main/default/objects/VC_Commit__c/fields/Source_Instance__c.field-meta.xml
<CustomField>
    <fullName>Source_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>VC Commits</relationshipLabel>
    <relationshipName>VC_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>