mywork/force-app/main/default/objects/VC_Commit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
                <isActive>false</isActive>
                <label>Failure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>