mywork/force-app/main/default/objects/VC_Commit__c/fields/VC_Repository__c.field-meta.xml
<CustomField>
    <fullName>VC_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository</label>
    <referenceTo>VC_Repository__c</referenceTo>
    <relationshipLabel>VC Commits</relationshipLabel>
    <relationshipName>VC_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>