mywork/force-app/main/default/objects/VC_Commit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Backlog_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>